--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layoutJuego"
     android:layout_width="match_parent"
@@ -17,7 +16,6 @@
         android:textStyle="bold"
         android:layout_marginBottom="16dp" />
 
-    <!-- Palabras como botones -->
     <GridLayout
         android:id="@+id/gridPalabras"
         android:layout_width="match_parent"
@@ -41,6 +39,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nuevo Juego"
+        android:backgroundTint="#FFA726"
         android:layout_marginTop="16dp" />
+
+    <Button
+        android:id="@+id/buttonStats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ver Estadísticas"
+        android:backgroundTint="#FFA726"
+        android:layout_marginTop="8dp"/>
+
 
 </LinearLayout>
