--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,19 +18,19 @@
 
     <GridLayout
         android:id="@+id/gridPalabras"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="3"
+        android:layout_marginBottom="16dp"
+        android:alignmentMode="alignMargins"
         android:rowCount="4"
-        android:layout_marginBottom="16dp">
-        <!-- Los botones se agregan desde el código -->
-    </GridLayout>
+        android:gravity="center" />
 
     <!-- Intentos restantes -->
     <TextView
         android:id="@+id/tvIntentos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:text="Intentos: 0 / 3" />
 
     <!-- Botón para reiniciar -->
