--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:layout_height="match_parent"
     android:padding="24dp">
 
+    <!--Usé amarillo en el diseño de los botones de la app-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
