--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -8,6 +8,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Historial de Juegos"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -25,12 +26,15 @@
                 android:orientation="vertical" />
         </ScrollView>
 
-        <Button
-            android:id="@+id/btnVolverInicio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nuevo Juego" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnVolverInicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nuevo Juego"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#FFA726"
+        android:layout_marginBottom="100dp"/>
+</LinearLayout>
 
 
 
